<?xml version="1.0" encoding="utf-8"?>

    <menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">
    <item
        android:id="@+id/item_rules"
        android:icon="@mipmap/rule"
        android:title="@string/rules" />
    <item
        android:id="@+id/item_game"
        android:icon="@mipmap/game"
        android:title="@string/game" />
    <item
        android:id="@+id/item_leaderboard"
        android:icon="@mipmap/leaderboard"
        android:title="@string/leaderboard" />
    <item
        android:id="@+id/item_profile"
        android:icon="@mipmap/profile"
        android:title="@string/profile" />
    <item
        android:id="@+id/item_logout"
        android:icon="@mipmap/logout"
        android:title="@string/logout" />

</group>

    </menu>